[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ffi = { path = "../ffi" }
kcore = { path = "../kcore" }
hello = { path = "../hello" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
nvme = { path = "../drivers/nvme" }
r8168 = { path = "../drivers/r8168" }
