[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ffi = { path = "../ffi" }
kcore = { path = "../kcore" }
hello = { path = "../hello" }
nvme = { path = "../drivers/nvme" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
r8168 = { path = "../drivers/r8168" }
